Fixes to the search field on mobile

--- a/TangerineUI.css
+++ b/TangerineUI.css
@@ -3929,14 +3929,15 @@ div[tabindex="-1"] + div[tabindex="-1"] > .status__wrapper > .status-reply.statu
 .app-body .search__popout__menu__item mark {
     color: var(--color-content-fg-bold);
 }
-.app-body .search__popout__menu__item .icon-button {
+.app-body .search__popout__menu__item :is(.icon-button, .icon-button .icon) {
     border-radius: 4px;
     transition: none;
 }
-.app-body .search__popout__menu__item:is(.selected, :active, :focus, :hover) .icon-button {
+.app-body .search__popout__menu__item:is(.selected, :active, :focus, :hover) :is(.icon-button, .icon-button .icon) {
     color: var(--color-accent-fg);
 }
-.app-body .search__popout__menu__item .icon-button:is(:active, :focus, :hover) {
+.app-body .search__popout__menu__item .icon-button:is(:active, :focus, :hover),
+.app-body .search__popout__menu__item .icon-button:is(:active, :focus, :hover) .icon {
     background-color: var(--color-content-secondary-bg);
     color: var(--color-accent);
 }
@@ -3960,7 +3961,7 @@ div[tabindex="-1"] + div[tabindex="-1"] > .status__wrapper > .status-reply.statu
         padding: 10px 0;
     }
     .app-body .search__icon .icon {
-        top: 11px;
+        top: 6px;
     }
 }
 @media screen and (max-width:889px) {
